gateway rework